# asr-kit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: cohere_basic.py  parakeet_basic.py  qwen_basic.py
src/asr_kit/: __init__.py  exceptions.py  transcriber.py  types.py
src/asr_kit/drivers/: __init__.py  base.py  cohere_driver.py  parakeet_driver.py  qwen_driver.py  utils.py
